租借切板完成

--- a/04-Drum.html
+++ b/04-Drum.html
@@ -264,32 +264,41 @@
                                         </div>
                                         <div class="overlay-ToRight">
                                             <div class="art-name">
-                                                <div class="art-text"></div>
+                                                <div class="art-text">李意瑩</div>
+                                                <div class="atr-text">鼓齡&nbsp;16年</div>
+                                                <div class="atr-text">主修&nbsp;中國打擊</div>
+                                                <div class="atr-text">進團時間&nbsp;2015年</div>
+                                                <div class="atr-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="art">
+                                        <div class="art-img art-img04">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text">許瑋庭</div>
                                                 <div class="art-text"></div>
                                                 <div class="art-text"></div>
                                                 <div class="art-text"></div>
                                                 <div class="art-text"></div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/許瑋庭.png" class="art-img" alt="許瑋庭">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">許瑋庭</div>
+                                        <div class="art-img art-img05">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text">吳鴻村</div>
+                                                <div class="art-text">鼓齡&nbsp;&nbsp;13年</div>
+                                                <div class="art-text">主修&nbsp;&nbsp;鼓</div>
+                                                <div class="art-text">進團時間&nbsp;&nbsp;2017年</div>
+                                                <div class="art-text">學歷&nbsp;&nbsp;台南藝術大學&nbsp;&nbsp;貫制音樂系</div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="art">
-                                        <img src="./img/樂團成員/成員去背/吳鴻村.png" class="art-img" alt="吳鴻村">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">吳鴻村</div>
-                                        </div>
-                                    </div>
-                                    <div class="art">
-                                        <img src="./img/樂團成員/成員去背/江逸芹.png" class="art-img" alt="江逸芹">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">江逸芹</div>
-                                        </div>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -299,33 +308,55 @@
                             <div class="page-text-artist">
                                 <div class="img-groups">
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/林薏軒.png" class="art-img" alt="林薏軒">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">林薏軒</div>
+                                        <div class="art-img art-img07">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text">林薏軒</div>
+                                                <div class="art-text">鼓齡&nbsp;&nbsp;13年</div>
+                                                <div class="art-text">主修&nbsp;&nbsp;鼓</div>
+                                                <div class="art-text">進團時間&nbsp;&nbsp;2017年</div>
+                                                <div class="art-text">學歷&nbsp;&nbsp;台南藝術大學&nbsp;&nbsp;貫制音樂系</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/張嘉方.png" class="art-img" alt="張嘉方">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">張嘉方</div>
+                                        <div class="art-img art-img08">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text">張嘉方</div>
+                                                <div class="art-text">鼓齡&nbsp;8年</div>
+                                                <div class="art-text">主修&nbsp;中國打擊樂</div>
+                                                <div class="art-text">進團時間&nbsp;2017年</div>
+                                                <div class="art-text">學歷&nbsp;國立台灣藝術大學&nbsp;中國音樂學系</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/徐霈純.png" class="art-img" alt="徐霈純">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">徐霈純</div>
+                                        <div class="art-img art-img09">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text">徐霈純</div>
+                                                <div class="atr-text">鼓齡&nbsp;16年</div>
+                                                <div class="atr-text">主修&nbsp;中國打擊</div>
+                                                <div class="atr-text">進團時間&nbsp;2015年</div>
+                                                <div class="atr-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/黃士芬.png" class="art-img" alt="黃士芬">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">黃士芬</div>
+                                        <div class="art-img art-img10">
                                         </div>
-                                    </div>
-                                    <div class="art">
-                                        <img src="./img/樂團成員/成員去背/黃志荃.png" class="art-img" alt="黃志荃">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">黃志荃</div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text">黃士芬</div>
+                                                <div class="art-text">鼓齡&nbsp;&nbsp;13年</div>
+                                                <div class="art-text">主修&nbsp;&nbsp;鼓</div>
+                                                <div class="art-text">進團時間&nbsp;&nbsp;2017年</div>
+                                                <div class="art-text">學歷&nbsp;&nbsp;台南藝術大學&nbsp;&nbsp;貫制音樂系</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -337,40 +368,40 @@
                             <div class="page-text-drama">
                                 <span class="line04">&nbsp;</span>
                                 <div class="drama-con">
-                                    <h3>夢糖劇場十鼓擊樂團鼓樂定目劇演出</h3>
-                                    <h4 class="pl-text">演出曲目</h4>
-                                    <h5 class="pl-text">天空斬</h5>
-                                    <h5 class="pl-text">風馳雷擎</h5>
-                                    <h5 class="pl-text">祈天現日</h5>
+                                    <div class="drama-title">夢糖劇場十鼓擊樂團鼓樂定目劇演出</div>
+                                    <div class="drama-sub-t pl-text">演出曲目</div>
+                                    <div class="drama-text pl-text">天空斬</div>
+                                    <div class="drama-text pl-text">風馳雷擎</div>
+                                    <div class="drama-text pl-text">祈天現日</div>
                                 </div>
-                                <img src="./img/插圖/海報人物10-12.png" class="drama-img" alt="">
+                                <img src="./img/鼓樂饗宴/海報人物 透明-10-16_工作區域 1.png" class="drama-img" alt="">
                             </div>
                         </div>
                         <!-- 第七頁 -->
                         <!-- 第八頁 定目劇-2 -->
                         <div class="page">
                             <div class="video">
-                                <div class="video-01">
-                                    <div class="dvd"></div>
+                                <div class="video-01 video-00">
+                                    <div class="dvd dvd-img01"></div>
                                     <div class="dvd-text">
                                         <h4>天空斬</h4>
-                                        <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h6>
+                                        <h5>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h5>
                                     </div>
                                 </div>
-                                <div class="video-02">
-                                    <div class="dvd"></div>
+                                <div class="video-02 video-00">
+                                    <div class="dvd dvd-img02"></div>
                                     <div class="dvd-text">
                                         <h4>風馳雷擎</h4>
-                                        <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
-                                            困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h6>
+                                        <h5>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
+                                            困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h5>
                                     </div>
                                 </div>
-                                <div class="video-01">
-                                    <div class="dvd"></div>
+                                <div class="video-01 video-00">
+                                    <div class="dvd dvd-img03"></div>
                                     <div class="dvd-text">
                                         <h4>祈天現日</h4>
-                                        <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
-                                            困境。鼓樂合奏詮釋忠、義、勇、武呈現出穿梭時空的對話。</h6>
+                                        <h5>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
+                                            困境。鼓樂合奏詮釋忠、義、勇、武呈現出穿梭時空的對話。</h5>
                                     </div>
                                 </div>
                             </div>
