--- a/06-Rented.html
+++ b/06-Rented.html
@@ -101,8 +101,8 @@
                 <!-- 標題 -->
                 <div class="lease-box">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn " data-toggle="modal" data-target="#exampleModal">
-                        <h2 class="btnn btnn--stripe btnn--radius">租借要點</h2>
+                    <button type="button" class="btn btn--stripe" data-toggle="modal" data-target="#exampleModal">
+                        <div class="btn-text ">租借要點</div>
                     </button>
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
@@ -137,7 +137,8 @@
                 </div>
                 <!-- 場地租借 -->
                 <a class="lease-box " href="https://tendrum.com.tw/venueOnlinecontact/zt">
-                    線上預約</a>
+                    <div class="btn btn--stripe">線上預約</div>
+                </a>
             </div>
         </div>
         <div class="photo-R">
@@ -146,36 +147,45 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./img/場地租借/石鼓會議廳-2.jpg " class="rented-img" alt="">
-                            <div class="text-center">
-                                <p>十鼓會議廳</p>
-                                <p>250-60人</p>
-                                <p>多功能活動場地</p>
+                            <div class="rented-img rented-img01">
+                                <div class="text-center">
+                                    <div class="text-set">十鼓會議廳</div>
+                                    <div class="text-set">250-60人</div>
+                                    <div class="text-set">多功能活動場地</div>
+                                </div>
                             </div>
+                            <!-- <img src="./img/場地租借/石鼓會議廳-2.jpg " class="rented-img" alt=""> -->
+
                         </div>
                         <div class="swiper-slide">
-                            <img src="./img/場地租借/永不出軌宴會廳-1.jpg" alt="" class="rented-img">
-                            <div class="text-center">
-                                <p>永不出軌</p>
-                                <p>400人</p>
-                                <p>婚宴、餐飲、活動場地</p>
+                            <div class="rented-img rented-img02">
+                                <div class="text-center">
+                                    <div class="text-set">永不出軌</div>
+                                    <div class="text-set">400人</div>
+                                    <div class="text-set">婚宴、餐飲、活動場地</div>
+                                </div>
                             </div>
+
                         </div>
                         <div class="swiper-slide">
-                            <img src="./img/場地租借/齒輪舞台-3.jpg" class="rented-img" alt="">
-                            <div class="text-center">
-                                <p>齒輪舞台</p>
-                                <p>1000-1100人</p>
-                                <p>大地、團康、表演</p>
+                            <div class="rented-img rented-img03">
+                                <div class="text-center">
+                                    <div class="text-set">齒輪舞台</div>
+                                    <div class="text-set">1000-1100人</div>
+                                    <div class="text-set">大地、團康、表演</div>
+                                </div>
                             </div>
+
                         </div>
                         <div class="swiper-slide">
-                            <img src="./img/場地租借/水槽劇場-4.jpg" class="rented-img" alt="">
-                            <div class="text-center">
-                                <p>水槽劇場</p>
-                                <p>2000人</p>
-                                <p>多功能活動場地</p>
+                            <div class="rented-img rented-img04">
+                                <div class="text-center">
+                                    <div class="text-set">水槽劇場</div>
+                                    <div class="text-set">2000人</div>
+                                    <div class="text-set">多功能活動場地</div>
+                                </div>
                             </div>
+
                         </div>
                     </div>
                     <!-- Add Pagination -->
