消息切板完成

--- a/02-News.html
+++ b/02-News.html
@@ -119,38 +119,37 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs new-img-01"></div>
-                                    <div class="new-time">2020-09-26</div>
-                                    <div class="new-name">2020/9/26(六)演出節目異動歡迎大家選擇喜歡的場次觀賞謝謝！！</div>
-                                    <div class="new-mores">
-                                        <div class="new-more">more</div>
+                                    <div class="new-imgs new-img-01">&emsp;</div>
+                                    <div class="new-text">
+                                        <div class="new-time">2020-09-26</div>
+                                        <div class="new-name">2020-09-26(六)演出節目異動歡迎大家選擇喜歡的場次觀賞謝謝！！</div>
                                     </div>
+                                    <div class="new-more">more</div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
                                 <div class="news">
                                     <div class="new-imgs new-img-02"></div>
-                                    <div class="new-time">2020-09-20</div>
-                                    <div class="new-name">2020.09.20(日)臺南十鼓仁糖文創園區 演出異動公告~~十鼓仁糖文創園區-演出節目異動..</div>
-                                    <div class="new-mores">
-                                        <div class="new-more">more</div>
+                                    <div class="new-text">
+                                        <div class="new-time">2020-09-20</div>
+                                        <div class="new-name">2020-09-20(日)臺南十鼓仁糖文創園區 演出異動公告～～十鼓仁糖文創園區-演出節目異動..</div>
                                     </div>
+                                    <div class="new-more">more</div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
                                 <div class="news">
                                     <div class="new-imgs new-img-03"></div>
-                                    <div class="new-time">2020-09-08</div>
-                                    <div class="new-name">2020.09.08(二)~09.09(三)十鼓文創設施設備開放調整公告</div>
-                                    <div class="new-mores">
-                                        <div class="new-more">more</div>
+                                    <div class="new-text">
+                                        <div class="new-time">2020-09-08</div>
+                                        <div class="new-name">2020-09-08(二)～09-09(三)十鼓文創設施設備開放調整公告</div>
                                     </div>
+                                    <div class="new-more">more</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
             <div class="new-context">
                 <div class="new-contain">
@@ -162,42 +161,41 @@
                             <div class="col-md-12 col-lg-4">
                                 <div class="news">
                                     <div class="new-imgs new-img-04"></div>
-                                    <div class="new-time">2020-10-02</div>
-                                    <div class="new-name">2020/10/02(五)、10/03(六)十鼓仁糖文創園區 夜間定目劇演出....</div>
-                                    <div class="new-mores">
-                                        <div class="new-more">more</div>
+                                    <div class="new-text">
+                                        <div class="new-time">2020-10-02</div>
+                                        <div class="new-name">2020-10-02(五)、10-03(六)十鼓仁糖文創園區 夜間定目劇演出...</div>
                                     </div>
+                                    <div class="new-more">more</div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-img new-img-05"></div>
-                                    <div class="new-time">2020-09-26</div>
-                                    <div class="new-name">夢糖劇場十鼓擊樂團鼓樂定目劇演出異動公告
+                                    <div class="new-imgs new-img-05"></div>
+                                    <div class="new-text">
+                                        <div class="new-time">2020-09-26</div>
+                                        <div class="new-name">夢糖劇場十鼓擊樂團鼓樂定目劇演出異動公告
+                                        </div>
                                     </div>
-                                    <div class="new-mores">
-                                        <div class="new-more">more</div>
-                                    </div>
+                                    <div class="new-more">more</div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-lg-4">
                                 <div class="news">
                                     <div class="new-imgs new-img-06"></div>
-                                    <div class="new-time">2020-09-05</div>
-                                    <div class="new-name">2020/09/05(六)二手市集開幕時間:早上9:00~下午6:00。歡迎各位...
+
+                                    <div class="new-text">
+                                        <div class="new-time">2020-09-05</div>
+                                        <div class="new-name">2020-09-05(六)二手市集開幕時間:早上9:00～下午6:00。歡迎各位...
+                                        </div>
                                     </div>
-                                    <div class="new-mores">
-                                        <div class="new-more">more</div>
-                                    </div>
+                                    <div class="new-more">more</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
     </div>
     <footer>版權聲明</footer>
 
