主頁加雲霧效果

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </style>
 </head>
 
-<body>   
+<body>
+    <div class="bg smoke-bg"></div>
+    <div class="bg smoke"></div>
     <div class="index">
         <div class="Nav">
             <img src="./img/其他/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
