雲霧效果移至消息

--- a/02-News.html
+++ b/02-News.html
@@ -96,7 +96,10 @@
             <!-- 漢堡條 -->
         </nav>
     </header>
+    <div class="bg smoke-bg"></div>
+    <div class="bg smoke"></div>
     <!-- 最新消息 -->
+    <div class="New-bg"></div>
     <div class="New">
         <div class="new-title">
             <div class="new-title-all">
